# multi-agent-course

./: .gitignore  CLAUDE.md  README.md  app.py  readme.md  requirements.txt
.claude/: settings.json
.claude/commands/: progress.md  start.md
FDE/Assignment_1_Live_Translate/: AGENTS.md  PRODUCT_EVAL.md  README.md  docker-compose.yml
FDE/Assignment_2_voice_agent/: .gitignore  RUNBOOK.md
FDE/Assignment_3_AI_Infra_K8s/: README.md
Full_Stack_Projects/Sprint_Zero/: CLAUDE.md  README.md
Module_4_Knowledge_Graphs/: START_HERE.md  knowledge_graph_neo4j_with_evals.ipynb  run_app.bat  run_app.sh  sample_questions.py
Module_5_ReAct_Agents/Agents/: Agent Pro ReAct.ipynb  Agent Pro from Scratch [old version].ipynb  AgentPro Starter Code.ipynb  Smol Agents.ipynb
Module_6_Multi_Agents/A2A ADK MCP/: info.txt
Module_6_Multi_Agents/Advance-Customer-Support-Agent/: .env  README.md  requirements.txt
Module_6_Multi_Agents/Customer-Support-Agent/: README.md
Module_6_Multi_Agents/MCP_ADK_Gemini_API/: info.txt  requirements.txt  server_log.txt
agents/: .env.example  agent.py  mcp_agent.py
clients/: query_MCP_ADK_A2A.py
modules/Module_1_Agent_Loop/: README.md
modules/Module_3_Agentic_RAG/: README.md  module-3-mindmap.html
modules/Module_4_AI_Evaluation/: README.md
modules/Module_5_Multi_Agents/: README.md  (+2 more)
modules/Module_5_Multi_Agents/Advance-Customer-Support-Agent/: pyproject.toml  toolbox
modules/Module_5_Multi_Agents/Advance-Customer-Support-Agent/cs_agent/: greet.py  prompts.py
progress/: learner-progress.md
servers/: server_mcp.py
(+194 files in other folders)
