[project]
name = "csa"
version = "0.1.0"
description = "Advance CLI based Customer Support Agent build using Google ADK and MCP all wrapped in a robust safety layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.21.0",
    "mem0ai>=1.0.1",
    "psycopg2>=2.9.11",
    "tabulate>=0.9.0",
    "toolbox-core>=0.5.4",
]